<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NintendoActivity"
    tools:showIn="@layout/activity_nintendo">

    <Button
        android:id="@+id/buttonWii"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        android:text="@string/buttonWii"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewWii" />

    <Button
        android:id="@+id/buttonWiiU"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/black"
        android:text="@string/buttonWiiu"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toEndOf="@+id/buttonWii"
        app:layout_constraintTop_toBottomOf="@+id/imageViewWiiU" />

    <Button
        android:id="@+id/buttonNintendo3ds"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        android:text="@string/button3ds"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3DS" />

    <Button
        android:id="@+id/buttonNintendoSwitch"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        android:text="@string/buttonSwitch"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNintendo3ds"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSwitch" />

    <ImageView
        android:id="@+id/imageViewWii"
        android:layout_width="167dp"
        android:layout_height="161dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_wii1_foreground" />

    <ImageView
        android:id="@+id/imageViewWiiU"
        android:layout_width="180dp"
        android:layout_height="153dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewWii"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_wii1u_background" />

    <ImageView
        android:id="@+id/imageView3DS"
        android:layout_width="162dp"
        android:layout_height="151dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonWii"
        app:srcCompat="@mipmap/ic_3ds_foreground" />

    <ImageView
        android:id="@+id/imageViewSwitch"
        android:layout_width="163dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3DS"
        app:layout_constraintTop_toBottomOf="@+id/buttonWiiU"
        app:srcCompat="@mipmap/ic_switch1_foreground" />

</android.support.constraint.ConstraintLayout>