<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SonyActivity"
    tools:showIn="@layout/activity_sony">

    <Button
        android:id="@+id/buttonPlay1"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        android:text="@string/butonPlay1"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPlay1" />

    <Button
        android:id="@+id/buttonPlay2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        android:text="@string/buttonPlay2"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay1"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPlay2" />

    <Button
        android:id="@+id/buttonPlay3"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        android:text="@string/buttonPlay3"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPlay3" />

    <Button
        android:id="@+id/buttonPlay4"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        android:text="@string/buttonPlay4"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay3"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPlay4" />

    <ImageView
        android:id="@+id/imageViewPlay1"
        android:layout_width="162dp"
        android:layout_height="166dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_ps1_foreground" />

    <ImageView
        android:id="@+id/imageViewPlay3"
        android:layout_width="162dp"
        android:layout_height="166dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay1"
        app:srcCompat="@mipmap/ic_ps31_foreground" />

    <ImageView
        android:id="@+id/imageViewPlay4"
        android:layout_width="161dp"
        android:layout_height="166dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toEndOf="@+id/imageViewPlay3"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay2"
        app:srcCompat="@mipmap/ic_ps4_foreground" />

    <ImageView
        android:id="@+id/imageViewPlay2"
        android:layout_width="162dp"
        android:layout_height="163dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewPlay1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_ps2_foreground" />

</android.support.constraint.ConstraintLayout>